--- a/dashboard.html
+++ b/dashboard.html
@@ -165,7 +165,11 @@
   </div>
 </div>
 
-    
+    <div class="p-4 border rounded bg-white shadow mb-4">
+  <h3 class="text-lg font-bold text-gray-700 mb-2">Lãi/Lỗ hiện tại</h3>
+  <div id="profitValue" class="text-2xl font-bold text-blue-600">Đang tính...</div>
+</div>
+
 
     <!-- Modal -->
     <div id="detailModal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
@@ -637,6 +641,60 @@ calculateInventory();
   });
 }
 calculateCashBySource();
+
+      function calculateProfitLoss() {
+  let totalExport = 0;
+  let totalImport = 0;
+  let totalExpense = 0;
+
+  const dbRef = firebase.database().ref();
+
+  Promise.all([
+    dbRef.child('exports').once('value'),
+    dbRef.child('imports').once('value'),
+    dbRef.child('cashflow').once('value')
+  ]).then(([exportsSnap, importsSnap, cashflowSnap]) => {
+    // Tổng tiền xuất kho (doanh thu)
+    exportsSnap.forEach(child => {
+      const data = child.val();
+      totalExport += parseFloat(data.total) || 0;
+    });
+
+    // Tổng tiền nhập kho (giá vốn)
+    importsSnap.forEach(child => {
+      const data = child.val();
+      totalImport += parseFloat(data.total) || 0;
+    });
+
+    // Tổng chi phí khác
+    cashflowSnap.forEach(child => {
+      const data = child.val();
+      if (data.type === 'chi') {
+        totalExpense += parseFloat(data.amount) || 0;
+      }
+    });
+
+    const profit = totalExport - totalImport - totalExpense;
+
+    console.log("Tổng doanh thu:", totalExport.toLocaleString());
+    console.log("Tổng giá vốn:", totalImport.toLocaleString());
+    console.log("Chi phí khác:", totalExpense.toLocaleString());
+    console.log("Lợi nhuận:", profit.toLocaleString());
+
+    $('#profitValue').text(profit.toLocaleString() + " đ");
+  });
+}
+
+      auth.onAuthStateChanged(user => {
+  if (!user) return location.href = "index.html";
+  $("#userName").text(user.email);
+  loadTable("imports", "importTable");
+  loadTable("exports", "exportTable");
+  loadCashflow();
+  calculateCashBySource();
+  calculateProfitLoss(); // 👈 gọi tính lãi lỗ
+});
+
 
     });
   </script>
