--- a/dashboard.html
+++ b/dashboard.html
@@ -90,7 +90,7 @@
     </div>
 
     <!-- Nhập kho Table -->
-    <h3 class="text-lg font-semibold mb-2 mt-6">Danh sách Nhập kho</h3>
+    <h3 class="text-lg font-semibold mb-2 mt-6">Nhập kho</h3>
     <table class="w-full border text-sm mb-6">
       <thead class="bg-green-100">
         <tr>
@@ -105,7 +105,7 @@
     </table>
 
     <!-- Xuất kho Table -->
-    <h3 class="text-lg font-semibold mb-2 mt-6">Danh sách Xuất kho</h3>
+    <h3 class="text-lg font-semibold mb-2 mt-6">Xuất kho</h3>
     <table class="w-full border text-sm mb-6">
       <thead class="bg-yellow-100">
         <tr>
@@ -120,7 +120,7 @@
     </table>
 
     <!-- Thu Chi Table -->
-    <h3 class="text-lg font-semibold mb-2 mt-6">Danh sách Thu - Chi</h3>
+    <h3 class="text-lg font-semibold mb-2 mt-6">Sổ quỹ</h3>
     <table class="w-full border text-sm mb-6">
       <thead class="bg-gray-100">
         <tr>
@@ -135,7 +135,7 @@
       <tbody id="incomeExpenseTable"></tbody>
     </table>
 
-    <h3 class="text-lg font-semibold mb-2 mt-6">Danh sách Tồn kho</h3>
+    <h3 class="text-lg font-semibold mb-2 mt-6">Tồn kho</h3>
     <table class="w-full border text-sm mb-6">
       <thead class="bg-gray-100">
         <tr>
@@ -149,7 +149,7 @@
       <tbody id="inventoryTable"></tbody>
     </table>
 
-    <h3 class="text-lg font-semibold mt-6 mb-2">Tiền hiện có theo nguồn</h3>
+    <h3 class="text-lg font-semibold mt-6 mb-2">Nguồn tiền hiện có</h3>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
       <div class="p-4 border rounded bg-white shadow">
         <div class="text-gray-500">TM</div>
@@ -166,7 +166,7 @@
     </div>
 
     <div class="p-4 border rounded bg-white shadow mb-4">
-      <h3 class="text-lg font-bold text-gray-700 mb-2">Lãi/Lỗ hiện tại</h3>
+      <h3 class="text-lg font-bold text-gray-700 mb-2">Lợi nhuận</h3>
       <div id="profitValue" class="text-2xl font-bold text-blue-600">Đang tính...</div>
     </div>
 
