--- a/dashboard.html
+++ b/dashboard.html
@@ -16,8 +16,8 @@
   <div class="max-w-6xl mx-auto bg-white shadow rounded-lg p-6">
     <!-- Header -->
     <div class="flex justify-between items-center mb-4">
-      <h2 class="text-xl font-bold text-green-600">Xin chào, <span id="userName">Người dùng</span></h2>
-      <button onclick="logout()" class="text-sm text-red-600 hover:underline">Đăng xuất</button>
+      <h2 class="text-xl font-bold text-green-600">Hi, <span id="userName">Username</span></h2>
+      <button onclick="logout()" class="text-sm text-red-600 hover:underline">Sign out</button>
     </div>
 
     <!-- Buttons -->
