--- a/dashboard.html
+++ b/dashboard.html
@@ -20,6 +20,26 @@
       <button onclick="logout()" class="text-sm font-bold text-red-600 hover:underline">Sign out</button>
     </div>
 
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mt-4 text-center">
+  <div class="bg-white shadow rounded p-4">
+    <p class="text-sm text-gray-500">Tổng doanh thu</p>
+    <p id="totalRevenue" class="text-xl font-semibold text-green-600">0 đ</p>
+  </div>
+  <div class="bg-white shadow rounded p-4">
+    <p class="text-sm text-gray-500">Tổng giá vốn</p>
+    <p id="totalCost" class="text-xl font-semibold text-blue-600">0 đ</p>
+  </div>
+  <div class="bg-white shadow rounded p-4">
+    <p class="text-sm text-gray-500">Chi phí hoạt động</p>
+    <p id="totalExpense" class="text-xl font-semibold text-orange-600">0 đ</p>
+  </div>
+  <div class="bg-white shadow rounded p-4">
+    <p class="text-sm text-gray-500">Lợi nhuận</p>
+    <p id="profitValue" class="text-xl font-semibold text-red-600">0 đ</p>
+  </div>
+</div>
+
+
     <!-- Buttons -->
     <div class="flex gap-4 mb-6">
       <button onclick="toggleForm('importForm')" class="bg-green-600 text-white px-4 py-2 rounded">+ Nhập kho</button>
@@ -188,10 +208,6 @@
       </div>
     </div>
 
-    <div class="p-4 border rounded bg-white shadow mb-4">
-      <h3 class="text-lg font-bold text-gray-700 mb-2">Lợi nhuận</h3>
-      <div id="profitValue" class="text-2xl font-bold text-blue-600">Đang tính...</div>
-    </div>
 
     <!-- Modal -->
     <div id="detailModal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
@@ -630,54 +646,81 @@
         });
       }
 
-function calculateProfitLoss() {
-  let totalExport = 0;     // Doanh thu từ xuất kho
-  let totalImport = 0;     // Chi phí mua hàng từ nhập kho
-  let totalOperating = 0;  // Chi phí hoạt động + mua hàng từ cashflow
-
+async function calculateProfitLossFIFO() {
   const dbRef = firebase.database().ref();
-  Promise.all([
-    dbRef.child('exports').once('value'),
+  const [importsSnap, exportsSnap, cashflowSnap] = await Promise.all([
     dbRef.child('imports').once('value'),
+    dbRef.child('exports').once('value'),
     dbRef.child('cashflow').once('value')
-  ]).then(([exportsSnap, importsSnap, cashflowSnap]) => {
-    // 1. Tính tổng tiền xuất kho (doanh thu)
-    exportsSnap.forEach(child => {
-      const data = child.val();
-      totalExport += parseFloat(data.total) || 0;
-    });
+  ]);
 
-    // 2. Tính tổng tiền nhập kho (chi phí mua hàng)
-    importsSnap.forEach(child => {
-      const data = child.val();
-      totalImport += parseFloat(data.total) || 0;
-    });
+  const stock = [];
 
-    // 3. Tính tổng chi phí hoạt động & chi phí mua hàng từ cashflow
-    cashflowSnap.forEach(child => {
-      const data = child.val();
-      if (
-        data.type === 'chi' &&
-        (data.category === 'chi phí hoạt động' || data.category === 'chi phí mua hàng')
-      ) {
-        totalOperating += parseFloat(data.amount) || 0;
+  // Chuyển dữ liệu nhập kho thành hàng tồn theo FIFO
+  importsSnap.forEach(child => {
+    const data = child.val();
+    const date = data.date || '';
+    data.items.forEach(item => {
+      stock.push({
+        name: item.name,
+        quantity: item.quantity,
+        price: item.price,
+        date
+      });
+    });
+  });
+
+  // Sắp xếp theo ngày nhập (FIFO)
+  stock.sort((a, b) => new Date(a.date) - new Date(b.date));
+
+  let totalRevenue = 0;
+  let totalCost = 0;
+
+  // Xử lý xuất kho: tính giá vốn theo FIFO
+  exportsSnap.forEach(child => {
+    const data = child.val();
+    totalRevenue += parseFloat(data.total) || 0;
+
+    data.items.forEach(exportItem => {
+      let qtyToProcess = exportItem.quantity;
+
+      for (let i = 0; i < stock.length && qtyToProcess > 0; i++) {
+        const lot = stock[i];
+        if (lot.name === exportItem.name && lot.quantity > 0) {
+          const usedQty = Math.min(qtyToProcess, lot.quantity);
+          totalCost += usedQty * lot.price;
+          lot.quantity -= usedQty;
+          qtyToProcess -= usedQty;
+        }
       }
     });
-
-    // 4. Tính lợi nhuận
-    const profit = totalExport - totalImport - totalOperating;
-
-    // 5. Hiển thị kết quả
-    $('#profitValue').text(profit.toLocaleString('vi-VN') + " đ");
   });
+
+  // Tính tổng chi phí hoạt động
+  let totalExpense = 0;
+  cashflowSnap.forEach(child => {
+    const data = child.val();
+    if (data.type === 'chi' && data.category === 'chi phí hoạt động') {
+      totalExpense += parseFloat(data.amount) || 0;
+    }
+  });
+
+  const profit = totalRevenue - totalCost - totalExpense;
+
+  // Hiển thị lên UI
+  $('#totalRevenue').text(totalRevenue.toLocaleString() + " đ");
+  $('#totalCost').text(totalCost.toLocaleString() + " đ");
+  $('#totalExpense').text(totalExpense.toLocaleString() + " đ");
+  $('#profitValue').text(profit.toLocaleString() + " đ");
 }
+
 
       auth.onAuthStateChanged(user => {
         if (!user) return location.href = "index.html";
         $("#userName").text(user.email);
         calculateInventory();
         calculateCashBySource();
-        calculateProfitLoss(); // 👈 gọi tính lãi lỗ
+        calculateProfitLossFIFO(); // 👈 gọi tính lãi lỗ
       });
     });
   </script>
