--- a/dashboard.html
+++ b/dashboard.html
@@ -20,7 +20,8 @@
       <button onclick="logout()" class="text-sm font-bold text-red-600 hover:underline">Sign out</button>
     </div>
 
-<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mt-4 text-center">
+<h3 class="text-lg font-semibold mt-6 mb-2">Chi tiết</h3>
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mt-4 mb-4 text-center">
   <div class="bg-white shadow rounded p-4">
     <p class="text-sm text-gray-500">Tổng doanh thu</p>
     <p id="totalRevenue" class="text-xl font-semibold text-green-600">0 đ</p>
