--- a/dashboard.html
+++ b/dashboard.html
@@ -20,7 +20,7 @@
       <button onclick="logout()" class="text-sm font-bold text-red-600 hover:underline">Sign out</button>
     </div>
 
-    <h3 class="text-lg font-bold mt-6 mb-2">Chi tiết</h3>
+    <h3 class="text-lg font-bold mt-6 mb-2">Lợi nhuận</h3>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mt-4 mb-4 text-center">
       <div class="bg-white shadow rounded p-4">
         <p class="text-sm text-gray-500">Tổng doanh thu</p>
