--- a/dashboard.html
+++ b/dashboard.html
@@ -54,7 +54,7 @@
       <tbody id="inventoryTable"></tbody>
     </table>
 
-    <h3 class="text-lg font-bold mt-6 mb-2">Nguồn tiền hiện có</h3>
+    <h3 class="text-lg font-bold mt-6 mb-2">Nguồn tiền</h3>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
       <div class="p-4 border rounded bg-white shadow">
         <div class="text-gray-500">TM</div>
