--- a/dashboard.html
+++ b/dashboard.html
@@ -200,7 +200,7 @@
           <th class="border px-2 py-1">Loại</th>
           <th class="border px-2 py-1">Ngày</th>
           <th class="border px-2 py-1">Số tiền</th>
-          <th class="border px-2 py-1">Người/Nội dung</th>
+          <th class="border px-2 py-1">Người</th>
           <th class="border px-2 py-1">Nguồn</th>
           <th class="border px-2 py-1">Ghi chú</th>
         </tr>
