--- a/dashboard.html
+++ b/dashboard.html
@@ -170,8 +170,8 @@
           <th class="border px-2 py-1">STT</th>
           <th class="border px-2 py-1">Ngày</th>
           <th class="border px-2 py-1">Khách hàng</th>
-          <th class="border px-2 py-1 text-center">Số mặt hàng</th>
-          <th class="border px-2 py-1 text-right">Tổng tiền</th>
+          <th class="border px-2 py-1 text-center">Lượng hàng</th>
+          <th class="border px-2 py-1 text-right">Tổng</th>
         </tr>
       </thead>
       <tbody id="importTable"></tbody>
@@ -185,8 +185,8 @@
           <th class="border px-2 py-1">STT</th>
           <th class="border px-2 py-1">Ngày</th>
           <th class="border px-2 py-1">Người nhận</th>
-          <th class="border px-2 py-1 text-center">Số mặt hàng</th>
-          <th class="border px-2 py-1 text-right">Tổng tiền</th>
+          <th class="border px-2 py-1 text-center">Lượng hàng</th>
+          <th class="border px-2 py-1 text-right">Tổng</th>
         </tr>
       </thead>
       <tbody id="exportTable"></tbody>
