--- a/dashboard.html
+++ b/dashboard.html
@@ -31,7 +31,7 @@
         <p id="totalCost" class="text-xl font-bold text-blue-600">0 đ</p>
       </div>
       <div class="bg-white shadow rounded p-4">
-        <p class="text-sm text-gray-500">Chi phí hoạt động</p>
+        <p class="text-sm text-gray-500">Chi hoạt động</p>
         <p id="totalExpense" class="text-xl font-bold text-orange-600">0 đ</p>
       </div>
       <div class="bg-white shadow rounded p-4">
