--- a/dashboard.html
+++ b/dashboard.html
@@ -131,7 +131,7 @@
 
       <textarea id="incomeNote" placeholder="Ghi chú" class="border p-2 rounded w-full mt-4"></textarea>
 
-      <button onclick="saveIncome()" class="mt-4 bg-blue-600 text-white px-4 py-2 rounded">Lưu thu tiền</button>
+      <button onclick="saveIncome()" class="mt-4 bg-blue-600 text-white px-4 py-2 rounded">Lưu</button>
     </div>
 
     <!-- Expense Form -->
@@ -159,7 +159,7 @@
 
       <textarea id="expenseNote" placeholder="Ghi chú" class="border p-2 rounded w-full mt-4"></textarea>
 
-      <button onclick="saveExpense()" class="mt-4 bg-red-600 text-white px-4 py-2 rounded">Lưu chi tiền</button>
+      <button onclick="saveExpense()" class="mt-4 bg-red-600 text-white px-4 py-2 rounded">Lưu</button>
     </div>
 
     <!-- Nhập kho Table -->
