--- a/dashboard.html
+++ b/dashboard.html
@@ -90,7 +90,7 @@
       <div id="importItems" class="space-y-2 mb-2"></div>
       <button onclick="addItem('importItems')" class="bg-blue-500 text-white px-4 py-1 rounded">+ Thêm mặt hàng</button>
       <div class="mt-4 font-bold">Tổng tiền: <span id="importTotal">0</span> đ</div>
-      <button onclick="saveImport()" class="mt-2 bg-green-600 text-white px-4 py-2 rounded">Lưu</button>
+      <button onclick="saveImport()" class="mt-2 bg-green-600 font-bold text-white px-4 py-2 rounded">Lưu</button>
     </div>
 
     <!-- Export Form -->
@@ -103,7 +103,7 @@
       <div id="exportItems" class="space-y-2 mb-2"></div>
       <button onclick="addItem('exportItems')" class="bg-blue-500 text-white px-4 py-1 rounded">+ Thêm mặt hàng</button>
       <div class="mt-4 font-bold">Tổng tiền: <span id="exportTotal">0</span> đ</div>
-      <button onclick="saveExport()" class="mt-2 bg-yellow-600 text-white px-4 py-2 rounded">Lưu</button>
+      <button onclick="saveExport()" class="mt-2 bg-yellow-600 font-bold text-white px-4 py-2 rounded">Lưu</button>
     </div>
 
     <!-- Income Form -->
@@ -131,7 +131,7 @@
 
       <textarea id="incomeNote" placeholder="Ghi chú" class="border p-2 rounded w-full mt-4"></textarea>
 
-      <button onclick="saveIncome()" class="mt-4 bg-blue-600 text-white px-4 py-2 rounded">Lưu</button>
+      <button onclick="saveIncome()" class="mt-4 bg-blue-600 font-bold text-white px-4 py-2 rounded">Lưu</button>
     </div>
 
     <!-- Expense Form -->
@@ -159,7 +159,7 @@
 
       <textarea id="expenseNote" placeholder="Ghi chú" class="border p-2 rounded w-full mt-4"></textarea>
 
-      <button onclick="saveExpense()" class="mt-4 bg-red-600 text-white px-4 py-2 rounded">Lưu</button>
+      <button onclick="saveExpense()" class="mt-4 bg-red-600 font-bold text-white px-4 py-2 rounded">Lưu</button>
     </div>
 
     <!-- Nhập kho Table -->
