--- a/dashboard.html
+++ b/dashboard.html
@@ -199,9 +199,9 @@
         <tr>
           <th class="border px-2 py-1">Loại</th>
           <th class="border px-2 py-1">Ngày</th>
-          <th class="border px-2 py-1">Số tiền</th>
-          <th class="border px-2 py-1">Người</th>
+          <th class="border px-2 py-1">Người gửi</th>
           <th class="border px-2 py-1">Nguồn</th>
+          <th class="border px-2 py-1">Số tiền</th>
         </tr>
       </thead>
       <tbody id="incomeExpenseTable"></tbody>
@@ -544,9 +544,9 @@ function editRecord(data, type) {
           <tr class="cursor-pointer hover:bg-gray-100" onclick='showModal(${JSON.stringify(d)}, "cashflow")'>
             <td class="border px-2 py-1 text-center">${d.type === 'thu' ? 'Thu' : 'Chi'}</td>
             <td class="border px-2 py-1 text-center">${new Date(d.date).toLocaleDateString()}</td>
-            <td class="border px-2 py-1 text-right">${Number(d.amount).toLocaleString()}</td>
             <td class="border px-2 py-1">${d.sender || d.content}</td>
             <td class="border px-2 py-1 text-center">${d.source || ''}</td>
+            <td class="border px-2 py-1 text-right">${Number(d.amount).toLocaleString()}</td>
           </tr>`;
             tbody.append(row);
           });
