--- a/dashboard.html
+++ b/dashboard.html
@@ -169,7 +169,7 @@
         <tr>
           <th class="border px-2 py-1">STT</th>
           <th class="border px-2 py-1">Ngày</th>
-          <th class="border px-2 py-1">Khách hàng</th>
+          <th class="border px-2 py-1">Người</th>
           <th class="border px-2 py-1 text-center">Lượng hàng</th>
           <th class="border px-2 py-1 text-right">Tổng</th>
         </tr>
@@ -184,7 +184,7 @@
         <tr>
           <th class="border px-2 py-1">STT</th>
           <th class="border px-2 py-1">Ngày</th>
-          <th class="border px-2 py-1">Người nhận</th>
+          <th class="border px-2 py-1">Người</th>
           <th class="border px-2 py-1 text-center">Lượng hàng</th>
           <th class="border px-2 py-1 text-right">Tổng</th>
         </tr>
