--- a/dashboard.html
+++ b/dashboard.html
@@ -201,7 +201,7 @@
           <th class="border px-2 py-1">Ngày</th>
           <th class="border px-2 py-1">Người gửi</th>
           <th class="border px-2 py-1">Nguồn</th>
-          <th class="border px-2 py-1">Số tiền</th>
+          <th class="border px-2 py-1 text-right">Số tiền</th>
         </tr>
       </thead>
       <tbody id="incomeExpenseTable"></tbody>
