--- a/dashboard.html
+++ b/dashboard.html
@@ -199,7 +199,7 @@
         <tr>
           <th class="border px-2 py-1">Loại</th>
           <th class="border px-2 py-1">Ngày</th>
-          <th class="border px-2 py-1">Người gửi</th>
+          <th class="border px-2 py-1">Người</th>
           <th class="border px-2 py-1">Nguồn</th>
           <th class="border px-2 py-1 text-right">Số tiền</th>
         </tr>
