--- a/dashboard.html
+++ b/dashboard.html
@@ -170,7 +170,7 @@
           <th class="border px-2 py-1">STT</th>
           <th class="border px-2 py-1">Ngày</th>
           <th class="border px-2 py-1">Người</th>
-          <th class="border px-2 py-1 text-center">Lượng hàng</th>
+          <th class="border px-2 py-1 text-center">Lượng</th>
           <th class="border px-2 py-1 text-right">Tổng</th>
         </tr>
       </thead>
@@ -185,7 +185,7 @@
           <th class="border px-2 py-1">STT</th>
           <th class="border px-2 py-1">Ngày</th>
           <th class="border px-2 py-1">Người</th>
-          <th class="border px-2 py-1 text-center">Lượng hàng</th>
+          <th class="border px-2 py-1 text-center">Lượng</th>
           <th class="border px-2 py-1 text-right">Tổng</th>
         </tr>
       </thead>
