--- a/dashboard.html
+++ b/dashboard.html
@@ -71,7 +71,7 @@
     </div>
 
     <!-- Buttons -->
-    <div class="flex gap-4 mt-6 mb-6">
+    <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-6">
       <button onclick="toggleForm('importForm')" class="bg-green-600 font-bold text-white px-4 py-2 rounded">+ Nhập kho</button>
       <button onclick="toggleForm('exportForm')" class="bg-yellow-600 font-bold text-white px-4 py-2 rounded">+ Xuất kho</button>
       <button onclick="toggleForm('incomeForm')" class="bg-blue-600 font-bold text-white px-4 py-2 rounded">+ Thu tiền</button>
