--- a/dashboard.html
+++ b/dashboard.html
@@ -88,7 +88,7 @@
         <input id="phone" placeholder="Số điện thoại" class="border p-2 rounded" />
       </div>
       <div id="importItems" class="space-y-2 mb-2"></div>
-      <button onclick="addItem('importItems')" class="bg-blue-500 text-white px-4 py-1 rounded">+ Thêm mặt hàng</button>
+      <button onclick="addItem('importItems')" class="bg-blue-500 font-bold text-white px-4 py-1 rounded">+ Thêm mặt hàng</button>
       <div class="mt-4 font-bold">Tổng tiền: <span id="importTotal">0</span> đ</div>
       <button onclick="saveImport()" class="mt-2 bg-green-600 font-bold text-white px-4 py-2 rounded">Lưu</button>
     </div>
@@ -101,7 +101,7 @@
         <input id="receiverPhone" placeholder="Số điện thoại" class="border p-2 rounded" />
       </div>
       <div id="exportItems" class="space-y-2 mb-2"></div>
-      <button onclick="addItem('exportItems')" class="bg-blue-500 text-white px-4 py-1 rounded">+ Thêm mặt hàng</button>
+      <button onclick="addItem('exportItems')" class="bg-blue-500 font-bold text-white px-4 py-1 rounded">+ Thêm mặt hàng</button>
       <div class="mt-4 font-bold">Tổng tiền: <span id="exportTotal">0</span> đ</div>
       <button onclick="saveExport()" class="mt-2 bg-yellow-600 font-bold text-white px-4 py-2 rounded">Lưu</button>
     </div>
